# MCEngine

./: .gitignore  CMakeLists.txt  README.md
include/: mc_backend.hpp  mc_engine.hpp  mc_kernel.h  mc_path.h  mc_portability.h
include/backends/: cuda_backend.cuh  cuda_backend.h  cuda_backend_impl.cuh  cuda_path_backend.h  cuda_path_backend_impl.cuh  omp_backend.h  omp_backend.hpp  omp_path_backend.h
include/openmp/: thread_affinity.h
include/rng/: config.h  philox.h  rng_arity.h  splitmix64.h
src/: cuda_backend.cu  omp_backend.cpp
tests/: CMakeLists.txt  test_d20_cuda.cpp  test_d20_omp.cpp  test_dice_until_6_cuda.cpp  test_dice_until_6_omp.cpp  test_multistep_cuda.cpp  test_multistep_omp.cpp  test_simple_ms_cuda.cpp
